--- a/pfr_non_boost-master/index.html
+++ b/pfr_non_boost-master/index.html
@@ -11,27 +11,28 @@ boost-no-inspect
 -->
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="refresh" content="0; url=../../doc/html/boost_pfr.html">
-<title>Boost.Stacktrace</title>
-<style>
-  body {
-    background: #fff;
-    color: #000;
-  }
-  a {
-    color: #00f;
-    text-decoration: none;
-  }
-</style>
+    <meta charset="utf-8">
+    <meta content="0; url=../../doc/html/boost_pfr.html" http-equiv="refresh">
+    <title>Boost.Stacktrace</title>
+    <style>
+        body {
+            background: #fff;
+            color: #000;
+        }
+
+        a {
+            color: #00f;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-  <p>
+<p>
     Automatic redirection failed, please go to
     <a href="../../doc/html/boost_pfr.html">../../doc/html/boost_pfr.html</a>
-  </p>
-  <p>
+</p>
+<p>
     &copy; 2014-2024 Antony Polukhin
-  </p>
+</p>
 </body>
 </html>
